# python-uv-sca

./: Pipfile  README.md  app.py  cli.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yaml
services/: cache.py  db.py
templates/: index.html
tests/: test_app.py
